//
// Coronalert
//
// Devside and all other contributors
// copyright owners license this file to you under the Apache
// License, Version 2.0 (the "License"); you may not use this
// file except in compliance with the License.
// You may obtain a copy of the License at
//
// http://www.apache.org/licenses/LICENSE-2.0
//
// Unless required by applicable law or agreed to in writing,
// software distributed under the License is distributed on an
// "AS IS" BASIS, WITHOUT WARRANTIES OR CONDITIONS OF ANY
// KIND, either express or implied.  See the License for the
// specific language governing permissions and limitations
// under the License.
//

import Foundation

enum BEAccessibilityIdentifiers {

	enum BEMobileTestId {
		static let selectDate = "BEAppStrings.BEMobileTestId.select"
		static let save = "BEAppStrings.BEMobileTestId.save"
		static let saveExplanation = "BEAppStrings.BEMobileTestId.saveExplanation"
		static let saveExplanation2 = "BEAppStrings.BEMobileTestId.saveExplanation2"
	}
	
	enum BECoviCode {
		static let submit = "BEAppStrings.BECoviCode.submit"
		static let explanation = "BEAppStrings.BECoviCode.explanation"
	}
	
	enum BESelectSymptomsDate {
		static let next = "BEAppStrings.BESelectSymptomsDate.next"
	}
	enum BESelectKeyCountries {
		static let explanation = "BEAppStrings.BESelectKeyCountries.explanation"
		static let shareIds = "BEAppStrings.BESelectKeyCountries.shareIds"
	}
	
	enum BEWarnOthers {
		static let alert = "BEAppStrings.BEWarnOthers.alert"
		static let next = "BEAppStrings.BEWarnOthers.next"
		static let yes = "BEAppStrings.BEWarnOthers.yes"
		static let no = "BEAppStrings.BEWarnOthers.no"
	}
	
	enum BETestResult {
		static let next = "BEAppStrings.BETestResult.next"
	}
	
	enum BERiskLegend {
		static let infectionSummaryText = "BEAppStrings.BERiskLegend.infectionSummaryText"
	}
	
	enum BEExposureSubmissionSuccess {
		static let button = "BEAppStrings.BEExposureSubmissionSuccess.button"
	}
		
	enum BESettings {
		static let mobileDataLabel = "BEAppStrings.BESettings.mobileDataLabel"
	}
	
	enum BEMobileDataUsageSettings {
		static let identifier = "BEAppStrings.BESettings.BEMobileDataUsageSettings.identifier"
		static let image = "BEAppStrings.BESettings.BEMobileDataUsageSettings.image"
	}
	
	enum BEExposureNotification {
		static let euInteroperabilityCell = "BEAppStrings.BEExposureNotification.euInteroperability.euInteroperabilityCell"
	}
	
	enum BEHome {
		static let toolbox = "BEAppStrings.BEHome.toolbox"
		static let coviCode = "BEAppStrings.BEHome.coviCode"
		static let covidSafe = "BEAppStrings.BEHome.covidSafe"
		static let riskCardHighButton = "BEAppStrings.BEHome.riskCardHighButton"
	}
	
	enum BEToolbox {
		static let vaccinationInformation = "BEAppStrings.BEToolbox.vaccinationInformation"
		static let testCenter = "BEAppStrings.BEToolbox.testCenter"
		static let testReservation = "BEAppStrings.BEToolbox.testReservation"
		static let quarantineCertificate = "BEAppStrings.BEToolbox.quarantineCertificate"
		static let passengerLocatorForm = "BEAppStrings.BEToolbox.passengerLocatorForm"
	}
	
	enum BEAlreadyDidTest {
		static let close = "BEAppstrings.BEAlreadyDidTest.close"
	}
	
	enum BECovidSafe {
		static let button = "BEAppStrings.BECovidSafe.button"
	}
}
